# http-audit

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260623-043402-http-audit-docs-e9c49303.md
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: PRD.md  REQUIREMENTS.md  ROADMAP.md  TECH_SPEC.md
src/: http_audit.py
tests/: test_http_audit.py
