[project]
name = "http-audit"
version = "0.1.0"
description = "Kernel-Level HTTP Interaction Collector with process/PID filtering"
authors = [{name = "Axentx", email = "dev@axentx.com"}]
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
